# ImGrep-backend

./: .env  .gitignore  Dockerfile  Dockerfile.pgvector  HowToRun.md  README.md  app.py  dataset.py  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
backend/: settings.py
backend/api/: urls.py  views.py
docs/: HowToRun.md  test.txt
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
src/: apitest.py  config.py  db.py  main.py  models.py  settings.py  urls.py  wsgi.py
src/api/: feed.py  init.py  views.py
src/imgrep/: imgrep.py
src/imgrep/caption_model/: captioner.py  models.py
src/imgrep/date_time_parser/: date_time_parser.py
src/imgrep/face_recog/: face_recog.py
src/imgrep/ocr/: crnn.py  ocr.py
src/imgrep/ocr/craft/: craft.py
src/imgrep/ocr/craft/basenet/: vgg16_bn.py
src/routes/: get_caption.py  image_upload.py  label.py  search.py  user.py
src/utils/: logger.py
